# kinova-assembly

./: .gitignore  README.md  kill.sh  kinova使用说明.txt  my_robot_calibration.yaml  ur_cl.txt
Universal_Robots_ROS2_Driver/ur_bringup/: CMakeLists.txt
Universal_Robots_ROS2_Driver/ur_bringup/scripts/: action_demo.py  arm_demo.py  arm_gripper_demo.py  arm_gripper_visual_demo(backup).py  arm_gripper_visual_demo.py  go_home.sh  gripper_demo.py  gripper_server_test.py  min_client.py  min_server.py  ur_base_tf_pub.py  visual_demo.py  visual_demo_motion.py
Universal_Robots_ROS2_Driver/ur_controllers/: CMakeLists.txt
external_device/hyy_external_controller/: hyy_external_controller_plugin.xml
external_device/inspire_hand_description/: package.xml
gazebo_grasp_plugin/src/: GazeboGraspFix.cpp
humanoid_robot/hyy_control_interface/: CMakeLists.txt  package.xml
humanoid_robot/hyy_control_interface/include/hyy_control_interface/: hyy_control_interface.h
humanoid_robot/hyy_control_interface/launch/: motion_plan_demo.launch.py
humanoid_robot/hyy_control_interface/src/: collision_detect.cpp  h1_demo.cpp  h1_demo_cart.cpp  h1_demo_home.cpp  h1_demo_pos.cpp  h1_moveit_demo.cpp  h1_separate_cart.cpp  hyy_control_interface.cpp  t1_demo_pos.cpp
humanoid_robot/hyy_controller/: CMakeLists.txt
humanoid_robot/hyy_hardware_driver/: CMakeLists.txt  package.xml
humanoid_robot/hyy_hardware_driver/config/: h1_controller.yaml  my_world.world  t1_controller.yaml  xmate_controller.yaml
humanoid_robot/hyy_hardware_driver/launch/: h1_driver.launch.py  h1_gazebo.launch copy.py  h1_gazebo.launch.py  h1_moveit_driver.launch.py  h1_moveit_gazebo_driver.launch.py  t1_driver.launch.py  xmate_driver.launch.py
humanoid_robot/hyy_hardware_driver/src/: hyy_hardware_driver.cpp
humanoid_robot/hyy_message/: CMakeLists.txt
humanoid_robot/hyy_robot_control/: CMakeLists.txt  package.xml
humanoid_robot/hyy_robot_control/include/hyy_robot_control/: hyy_robot_control.h
humanoid_robot/hyy_robot_control/launch/: demo.launch.py
humanoid_robot/hyy_robot_control/src/: debugging.cpp  gripperdemo.cpp  h1_demo.cpp  h1_moveit_demo.cpp  handdemo.cpp  hyy_robot_control.cpp  motion_plan_demo.cpp  multiArmdemo.cpp  singleArmdemo.cpp  t1_demo.cpp
humanoid_robot/multi_arm_description/: CMakeLists.txt  package.xml
hyy_actions/: CMakeLists.txt  package.xml
hyy_actions/scripts/: gripper_action.cpp  moveJ_action.cpp  moveXYZW_action.cpp
hyy_message/: package.xml
hyy_message/action/: MoveXYZW.action
hyy_message/srv/: Geterror.srv  Getforceact.srv  Getforceset.srv  MovePose.srv  Setangle.srv
kinova_vision/launch/: kinova_vision.launch.py
kortex_bringup/: CMakeLists.txt
kortex_bringup/launch/: kortex_real.launch.py  kortex_sim_control.launch.py  kortex_sim_moveit_control.launch.py
kortex_bringup/scripts/: action_demo.py  send_pose.py
kortex_bringup/scripts/realrobot/: arm_demo.py  arm_gripper_demo.py  arm_gripper_visual_demo.py  arm_objectdet_demo.py  assembly_demo.py
kortex_bringup/scripts/sim/: arm_gripper_sim_demo.py  arm_gripper_visual_sim_demo.py  arm_objectdet_sim_demo.py  arm_sim_demo.py  assembly_part_spawner.py
kortex_bringup/worlds/: assembly.world  geer17.world
kortex_description/: CMakeLists.txt  package.xml
kortex_description/robots/: kinova.urdf.xacro  kortex_robot.xacro
kortex_description/visual/: camera_gazebo.xacro
models/: ee.world  ee_ori.world  note.txt
models/battery/: model.sdf  model_ori.sdf
models/pump/: model.sdf
models/regulator/: model.sdf
models/sensor/: model.sdf
multiarm_H1/dual_arm_gazebo/: CMakeLists.txt  package.xml
multiarm_H1/dual_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
multiarm_H1/h1_description/: CMakeLists.txt
multiarm_H1/h1_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
multiarm_H1/h1_robot_moveit_config/: .setup_assistant  package.xml
plan/: assembly_executor.py  assembly_tv.py  detect_at_home.py  hole_visit.py  read_d415.py  solver.py
robot_common/hyy_actions/: CMakeLists.txt  README.md  package.xml
robot_common/hyy_control_interface/: CMakeLists.txt  package.xml
robot_common/hyy_controller/: hyy_controller_plugin.xml  package.xml
robot_common/hyy_external_controller/: CMakeLists.txt  package.xml
robot_common/hyy_hardware_driver/: CMakeLists.txt  README.md  package.xml
robot_common/hyy_hardware_driver/config/: h1_controller.yaml  t1_controller.yaml
robot_common/hyy_hardware_driver/launch/: h1_driver.launch.py  h1_moveit_driver.launch.py  h1_moveit_gazbo_driver.launch.py  t1_driver.launch.py  t1_moveit_driver.launch.py  t1_moveit_gazbo_driver.launch.py  tc7_driver.launch.py
robot_common/hyy_hardware_driver/sh/arm_demo/: demo_action.sh
robot_common/hyy_hardware_interface/: CMakeLists.txt  hyy_hardware_interface_plugin.xml  package.xml
robot_common/hyy_message/: CMakeLists.txt
robot_common/hyy_message/srv/: Getangleset.srv  Getcurrentact.srv  Getposact.srv  Getspeedset.srv  Gettemp.srv  Robotgeneralcontrol.srv  Robotio.srv  Robotmove.srv  Setforce.srv  Setpos.srv  Setspeed.srv
robot_config/h1_config/: BusConfig.yaml  DeviceConfig.yaml  ExternalDeviceConfig.yaml  GlobalConfig.yaml  PH1.xml  eni.xml
robot_config/t1_config/: BusConfig.yaml  DeviceConfig.yaml  (+3 more)
robotiq_description/: CMakeLists.txt  package.xml
ros2_kortex/kortex_bringup/: CMakeLists.txt
ros2_kortex/kortex_bringup/scripts/: arm_demo.py  arm_gripper_demo.py  arm_objectdet_demo.py  arm_objectdet_demo_test.py  gripper_server_test.py
singleArmUniversal/single_arm_hardware_interface/: CMakeLists.txt  package.xml  single_arm_hardware_interface_plugin.xml
singleArmUniversal/single_arm_hardware_interface/include/device_interface/Move/: SafeAreas.h
singleArmUniversal/single_arm_hardware_interface/include/device_interface/user/: robot_control.h
singleArmUniversal/single_arm_hardware_interface/include/single_arm_hardware_interface/: single_arm_hardware_interface.hpp  visibility_control.h
singleArmUniversal/single_arm_hardware_interface/src/: single_arm_hardware_interface.cpp
yolo/: pcb_backplane.yaml  train.py
(+357 files in other folders)
