<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyy_hardware_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robotck@todo.todo">robotck</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>forward_command_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_controllers_test_nodes</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>hyy_actions</depend>
  <depend>xmate_description</depend>
  <depend>hyy_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
